// Code generated by github.com/99designs/gqlgen, DO NOT EDIT.

package model

import (
	"time"
)

type Label struct {
	Name    string    `json:"name"`
	Color   *string   `json:"color,omitempty"`
	Tickets []*Ticket `json:"tickets,omitempty"`
}

type Mutation struct {
}

type NewUser struct {
	Mail      string `json:"mail"`
	Firstname string `json:"firstname"`
	Lastname  string `json:"lastname"`
	Role      string `json:"role"`
}

type Query struct {
}

type Setting struct {
	Key   string `json:"key"`
	Value string `json:"value"`
}

type Ticket struct {
	ID           int32     `json:"id"`
	Text         string    `json:"text"`
	Note         *string   `json:"note,omitempty"`
	State        int32     `json:"state"`
	CreatedAt    time.Time `json:"createdAt"`
	LastModified time.Time `json:"lastModified"`
	Labels       []*Label  `json:"labels,omitempty"`
}

type User struct {
	ID           int32     `json:"id"`
	Mail         string    `json:"mail"`
	Firstname    string    `json:"firstname"`
	Lastname     string    `json:"lastname"`
	Role         string    `json:"role"`
	CreatedAt    time.Time `json:"createdAt"`
	LastModified time.Time `json:"lastModified"`
}
