// Docs: https://dbml.dbdiagram.io/docs

Table tickets {
  id integer [primary key]
  text varchar [not null]
  note varchar [note: "Used by admin note field"]
  state integer [not null, note: "le ampelsystem"] 
  created_at timestamp [not null]
  last_modified timestamp [not null]
}

Table labels_to_ticket {
  ticket integer [ref: > tickets.id, not null]
  label varchar [ref: > labels.name, not null]
}

Table labels {
  name varchar [primary key]
  color varchar
}


Table users {
  id integer [primary key]
  sid varchar
  mail varchar [not null, unique]
  firstname varchar [not null]
  lastname varchar [not null]
  role varchar [not null]
  created_at timestamp [not null]
  last_modified timestamp [not null]
}

Table settings {
  key varchar [primary key]
  value varchar [not null]
}
